# vo-frontend

./: CMakeLists.txt
include/core/: camera.h  pose.h
include/frontend/: feature_detector.h  feature_matcher.h  frontend.h  initializer.h  pose_estimator.h  triangulator.h
include/io/: config.h
include/types/: frame.h  landmark.h
include/visualization/: pangolin_visualizer.h
src/apps/: run_frontend.cpp  test_detect_match.cpp  test_init_triangulate.cpp  test_pnp_track.cpp
src/frontend/: feature_detector.cpp  feature_matcher.cpp  frontend.cpp  initializer.cpp  pose_estimator.cpp  triangulator.cpp
src/visualization/: pangolin_visualizer.cpp
